==> Motsai/EHAL/ARM/Nordic/src/uart_nrf5x.cpp <==
#include <string.h>
#include <stdio.h>
#include <stdint.h>
#include <stdarg.h>
#include "nrf.h"
#include "istddef.h"
#include "iopinctrl.h"
#include "coredev/uart.h"
#include "idelay.h"
#include "atomic.h"
#define NRF5X_UART_HWFIFO_SIZE		6
#define NRF5X_UART_RXTIMEOUT		15
#define NRF5X_UART_BUFF_SIZE		16
#define NRF52_UART_DMA_MAX_LEN		65535
#define NRF52_UART_DMA_MAX_LEN		255
#define NRF5X_UART_CFIFO_SIZE		CFIFO_MEMSIZE(NRF5X_UART_BUFF_SIZE)

static inline int nRFUARTGetRate(DEVINTRF * const pDev) {
	return ((NRF5X_UARTDEV*)pDev->pDevData)->pUartDev->Rate;
}

static int nRFUARTSetRate(DEVINTRF * const pDev, int Rate)
{
	NRF5X_UARTDEV *dev = (NRF5X_UARTDEV *)pDev->pDevData;

	int rate = s_BaudnRF[s_NbBaudnRF].Baud;

	for (int i = 0; i < s_NbBaudnRF; i++)
	{
		if (s_BaudnRF[i].Baud >= Rate)
		{
		    dev->pReg->BAUDRATE = (s_BaudnRF[i].nRFBaud << UART_BAUDRATE_BAUDRATE_Pos);

		    rate = s_BaudnRF[i].Baud;
		    break;
		}
	}

	return rate;
}

static int nRFUARTRxData(DEVINTRF * const pDev, uint8_t *pBuff, int Bufflen)
{
	NRF5X_UARTDEV *dev = (NRF5X_UARTDEV *)pDev->pDevData;
	int cnt = 0;

	uint32_t state = DisableInterrupt();
	while (Bufflen)
	{
		int l  = Bufflen;
		uint8_t *p = CFifoGetMultiple(dev->pUartDev->hRxFifo, &l);
		if (p == NULL)
			break;
		memcpy(pBuff, p, l);
		cnt += l;
		pBuff += l;
		Bufflen -= l;
	}
	EnableInterrupt(state);

	if (dev->pUartDev->bRxReady)
	{
		uint8_t *p = CFifoPut(dev->pUartDev->hRxFifo);
		if (p)
		{
			dev->pReg->EVENTS_RXDRDY = 0;
			dev->pUartDev->bRxReady = false;
			*p = dev->pReg->RXD;
		}
	}

	return cnt;
}

static int nRFUARTTxData(DEVINTRF * const pDev, uint8_t *pData, int Datalen)
{
	NRF5X_UARTDEV *dev = (NRF5X_UARTDEV *)pDev->pDevData;
    int cnt = 0;
    int rtry = pDev->MaxRetry;

    while (Datalen > 0 && rtry-- > 0)
    {
        uint32_t state = DisableInterrupt();

        while (Datalen > 0)
        {
            int l = Datalen;
            uint8_t *p = CFifoPutMultiple(dev->pUartDev->hTxFifo, &l);
            if (p == NULL)
                break;
            memcpy(p, pData, l);
            Datalen -= l;
            pData += l;
            cnt += l;
        }
        EnableInterrupt(state);

        if (dev->pUartDev->bTxReady)
        {
#ifdef NRF52_SERIES
        	if (pDev->bDma == true)
        	{
        		int l = NRF5X_UART_BUFF_SIZE;//min(CFifoUsed(dev->pUartDev->hTxFifo), NRF52_UART_DMA_MAX_LEN);
        		uint8_t *p = CFifoGetMultiple(dev->pUartDev->hTxFifo, &l);
        		if (p)
        		{
        			dev->pUartDev->bTxReady = false;

        			// Transfer to tx cache before sending as CFifo will immediately make the memory
        			// block available for reuse in the Put request. This could cause an overwrite
        			// if uart tx has not completed in time.
        			memcpy(dev->TxDmaCache, p, l);

					dev->pDmaReg->TXD.MAXCNT = l;
					dev->pDmaReg->TXD.PTR = (uint32_t)dev->TxDmaCache;
					dev->pDmaReg->TASKS_STARTTX = 1;
        		}
        	}
        	else
#endif
            //if (nRFUARTWaitForTxReady(dev, 1000))
            {
                dev->pReg->EVENTS_TXDRDY = 0;
                dev->pUartDev->bTxReady = true;
                uint8_t *p = CFifoGet(dev->pUartDev->hTxFifo);
                if (p)
                {
                    dev->pUartDev->bTxReady = false;
                    dev->pReg->TXD = *p;
                }
            }
        }
    }
    return cnt;
}

bool UARTInit(UARTDEV * const pDev, const UARTCFG *pCfg)
{
	// Config I/O pins
	if (pDev == NULL || pCfg == NULL)
	{
		return false;
	}

	if (pCfg->pIoMap == NULL || pCfg->IoMapLen <= 0)
	{
		return false;
	}

	if (pCfg->DevNo < 0 || pCfg->DevNo >= s_NbUartDev)
	{
		return false;
	}

	int devno = pCfg->DevNo;

	// Force power on in case it was powered off previously
	*(volatile uint32_t *)((uint32_t)s_nRFUartDev[devno].pReg + 0xFFC);
	*(volatile uint32_t *)((uint32_t)s_nRFUartDev[devno].pReg + 0xFFC) = 1;

	if (pCfg->pRxMem && pCfg->RxMemSize > 0)
	{
		pDev->hRxFifo = CFifoInit(pCfg->pRxMem, pCfg->RxMemSize, 1, pCfg->bFifoBlocking);
	}
	else
	{
		pDev->hRxFifo = CFifoInit(s_nRFUartDev[devno].RxFifoMem, NRF5X_UART_CFIFO_SIZE, 1, pCfg->bFifoBlocking);
	}

	if (pCfg->pTxMem && pCfg->TxMemSize > 0)
	{
		pDev->hTxFifo = CFifoInit(pCfg->pTxMem, pCfg->TxMemSize, 1, pCfg->bFifoBlocking);
	}
	else
	{
		pDev->hTxFifo = CFifoInit(s_nRFUartDev[devno].TxFifoMem, NRF5X_UART_CFIFO_SIZE, 1, pCfg->bFifoBlocking);
	}

	IOPINCFG *pincfg = (IOPINCFG*)pCfg->pIoMap;

	IOPinSet(pincfg[UARTPIN_TX_IDX].PortNo, pincfg[UARTPIN_TX_IDX].PinNo);
	IOPinCfg(pincfg, pCfg->IoMapLen);

	pDev->DevIntrf.pDevData = &s_nRFUartDev[devno];
	s_nRFUartDev[devno].pUartDev = pDev;

#ifdef NRF51
	pDev->DevIntrf.bDma = false;	// DMA not avail on nRF51

	s_nRFUartDev[devno].RxPin = pincfg[UARTPIN_RX_IDX].PinNo;
	s_nRFUartDev[devno].TxPin = pincfg[UARTPIN_TX_IDX].PinNo;
	s_nRFUartDev[devno].pReg->PSELRXD = pincfg[UARTPIN_RX_IDX].PinNo;
	s_nRFUartDev[devno].pReg->PSELTXD = pincfg[UARTPIN_TX_IDX].PinNo;
#else
	pDev->DevIntrf.bDma = devno == 0 ? pCfg->bDMAMode : true;

	s_nRFUartDev[devno].RxPin = (pincfg[UARTPIN_RX_IDX].PinNo & 0x1f) | (pincfg[UARTPIN_RX_IDX].PortNo << 5);
	s_nRFUartDev[devno].TxPin = (pincfg[UARTPIN_TX_IDX].PinNo & 0x1f) | (pincfg[UARTPIN_TX_IDX].PortNo << 5);
	s_nRFUartDev[devno].pReg->PSELRXD = s_nRFUartDev[devno].RxPin;
	s_nRFUartDev[devno].pReg->PSELTXD = s_nRFUartDev[devno].TxPin;
#endif

    // Set baud
    pDev->Rate = nRFUARTSetRate(&pDev->DevIntrf, pCfg->Rate);

    s_nRFUartDev[devno].pReg->CONFIG &= ~(UART_CONFIG_PARITY_Msk << UART_CONFIG_PARITY_Pos);
	if (pCfg->Parity == UART_PARITY_NONE)
	{
		s_nRFUartDev[devno].pReg->CONFIG |= UART_CONFIG_PARITY_Excluded << UART_CONFIG_PARITY_Pos;
	}
	else
	{
		s_nRFUartDev[devno].pReg->CONFIG |= UART_CONFIG_PARITY_Included << UART_CONFIG_PARITY_Pos;
	}

	s_nRFUartDev[devno].pReg->EVENTS_RXDRDY = 0;
	s_nRFUartDev[devno].pReg->EVENTS_TXDRDY = 0;
	s_nRFUartDev[devno].pReg->EVENTS_ERROR = 0;
	s_nRFUartDev[devno].pReg->EVENTS_RXTO = 0;
	s_nRFUartDev[devno].pReg->ERRORSRC = NRF_UART0->ERRORSRC;
	s_nRFUartDev[devno].pReg->EVENTS_CTS = 0;

#ifdef NRF52_SERIES
	if (pDev->DevIntrf.bDma == true)
	{
		s_nRFUartDev[devno].pDmaReg->EVENTS_RXSTARTED = 0;
		s_nRFUartDev[devno].pDmaReg->EVENTS_TXSTARTED = 0;
		s_nRFUartDev[devno].pDmaReg->EVENTS_TXSTOPPED = 0;
	}
#endif

    if (pCfg->FlowControl == UART_FLWCTRL_HW)
	{
    	s_nRFUartDev[devno].pReg->CONFIG |= (UART_CONFIG_HWFC_Enabled << UART_CONFIG_HWFC_Pos);
#ifdef NRF51
    	s_nRFUartDev[devno].CtsPin = pincfg[UARTPIN_CTS_IDX].PinNo;
    	s_nRFUartDev[devno].RtsPin = pincfg[UARTPIN_RTS_IDX].PinNo;
    	s_nRFUartDev[devno].pReg->PSELCTS = pincfg[UARTPIN_CTS_IDX].PinNo;
    	s_nRFUartDev[devno].pReg->PSELRTS = pincfg[UARTPIN_RTS_IDX].PinNo;
#else
    	s_nRFUartDev[devno].CtsPin = (pincfg[UARTPIN_CTS_IDX].PinNo & 0x1f) | (pincfg[UARTPIN_CTS_IDX].PortNo << 5);
    	s_nRFUartDev[devno].RtsPin = (pincfg[UARTPIN_RTS_IDX].PinNo & 0x1f) | (pincfg[UARTPIN_RTS_IDX].PortNo << 5);
    	s_nRFUartDev[devno].pReg->PSELCTS = s_nRFUartDev[devno].CtsPin;
    	s_nRFUartDev[devno].pReg->PSELRTS = s_nRFUartDev[devno].RtsPin;
#endif
		NRF_GPIO->OUTCLR = (1 << pincfg[UARTPIN_CTS_IDX].PinNo);
		NRF_GPIO->OUTCLR = (1 << pincfg[UARTPIN_RTS_IDX].PinNo);
	}
	else
	{
		s_nRFUartDev[devno].pReg->CONFIG &= ~(UART_CONFIG_HWFC_Enabled << UART_CONFIG_HWFC_Pos);
		s_nRFUartDev[devno].pReg->PSELRTS = -1;
		s_nRFUartDev[devno].pReg->PSELCTS = -1;
		s_nRFUartDev[devno].CtsPin = -1;
		s_nRFUartDev[devno].RtsPin = -1;
	}


	s_nRFUartDev[devno].pUartDev->bRxReady = false;
	s_nRFUartDev[devno].pUartDev->bTxReady = true;
	s_nRFUartDev[devno].ErrCnt = 0;
	s_nRFUartDev[devno].RxTimeoutCnt = 0;
	s_nRFUartDev[devno].RxDropCnt = 0;
	s_nRFUartDev[devno].TxDropCnt = 0;

	pDev->DevIntrf.Type = DEVINTRF_TYPE_UART;
	pDev->DataBits = pCfg->DataBits;
	pDev->FlowControl = pCfg->FlowControl;
	pDev->StopBits = pCfg->StopBits;
	pDev->bIrDAFixPulse = pCfg->bIrDAFixPulse;
	pDev->bIrDAInvert = pCfg->bIrDAInvert;
	pDev->bIrDAMode = pCfg->bIrDAMode;
	pDev->IrDAPulseDiv = pCfg->IrDAPulseDiv;
	pDev->Parity = pCfg->Parity;
	pDev->bIntMode = pCfg->bIntMode;
	pDev->EvtCallback = pCfg->EvtCallback;
	pDev->DevIntrf.Disable = nRFUARTDisable;
	pDev->DevIntrf.Enable = nRFUARTEnable;
	pDev->DevIntrf.GetRate = nRFUARTGetRate;
	pDev->DevIntrf.SetRate = nRFUARTSetRate;
	pDev->DevIntrf.StartRx = nRFUARTStartRx;
	pDev->DevIntrf.RxData = nRFUARTRxData;
	pDev->DevIntrf.StopRx = nRFUARTStopRx;
	pDev->DevIntrf.StartTx = nRFUARTStartTx;
	pDev->DevIntrf.TxData = nRFUARTTxData;
	pDev->DevIntrf.StopTx = nRFUARTStopTx;
	pDev->DevIntrf.bBusy = false;
	pDev->DevIntrf.MaxRetry = UART_RETRY_MAX;
	pDev->DevIntrf.PowerOff = nRFUARTPowerOff;
	pDev->DevIntrf.EnCnt = 1;


#ifdef NRF52_SERIES
	if (pDev->DevIntrf.bDma == true)
	{
		s_nRFUartDev[devno].pDmaReg->ENABLE = (UARTE_ENABLE_ENABLE_Enabled << UARTE_ENABLE_ENABLE_Pos);
		// Not using DMA transfer on Rx. It is useless on UART as we need to process 1 char at a time
		// cannot wait until DMA buffer is filled.
#if 0
		s_nRFUartDev[devno].pDmaReg->RXD.MAXCNT = NRF5X_UART_BUFF_SIZE;
		s_nRFUartDev[devno].pDmaReg->RXD.PTR = (uint32_t)s_nRFUartDev[devno].RxDmaCache;
#endif
		s_nRFUartDev[devno].pDmaReg->EVENTS_ENDRX = 0;
		s_nRFUartDev[devno].pDmaReg->TASKS_STARTRX = 1;
	}
	else
#endif
	{
		s_nRFUartDev[devno].pReg->ENABLE = (UART_ENABLE_ENABLE_Enabled << UART_ENABLE_ENABLE_Pos);
		s_nRFUartDev[devno].pReg->TASKS_STARTTX = 1;
		s_nRFUartDev[devno].pReg->TASKS_STARTRX = 1;

	}

    s_nRFUartDev[devno].pReg->INTENCLR = 0xffffffffUL;

	if (pCfg->bIntMode)
	{
#ifdef NRF52_SERIES
		if (pDev->DevIntrf.bDma == true)
		{
			s_nRFUartDev[devno].pDmaReg->INTENSET = (UARTE_INTENSET_RXDRDY_Set << UARTE_INTENSET_RXDRDY_Pos) |
							  (UARTE_INTENSET_RXTO_Set << UARTE_INTENSET_RXTO_Pos) |
							  (UARTE_INTENSET_TXDRDY_Set << UARTE_INTENSET_TXDRDY_Pos) |
							  (UARTE_INTENSET_ERROR_Set << UARTE_INTENSET_ERROR_Pos) |
							  (UARTE_INTENSET_CTS_Set << UARTE_INTENSET_CTS_Pos) |
							  (UARTE_INTENSET_NCTS_Set << UARTE_INTENSET_NCTS_Pos) |
							  (UARTE_INTENSET_ENDTX_Set << UARTE_INTENSET_ENDTX_Pos) |
							  (UARTE_INTENSET_ENDRX_Set << UARTE_INTENSET_ENDRX_Pos);
		}
		else
#endif
		{
			s_nRFUartDev[devno].pReg->INTENSET = (UART_INTENSET_RXDRDY_Set << UART_INTENSET_RXDRDY_Pos) |
							  (UART_INTENSET_RXTO_Set << UART_INTENSET_RXTO_Pos) |
							  (UART_INTENSET_TXDRDY_Set << UART_INTENSET_TXDRDY_Pos) |
							  (UART_INTENSET_ERROR_Set << UART_INTENSET_ERROR_Pos) |
							  (UART_INTENSET_CTS_Set << UART_INTENSET_CTS_Pos) |
							  (UART_INTENSET_NCTS_Set << UART_INTENSET_NCTS_Pos);
		}

		switch (devno)
		{
			case 0:
				NVIC_ClearPendingIRQ(UART0_IRQn);
				NVIC_SetPriority(UART0_IRQn, pCfg->IntPrio);
				NVIC_EnableIRQ(UART0_IRQn);
				break;
#ifdef NRF52840_XXAA
			case 1:
				NVIC_ClearPendingIRQ(UARTE1_IRQn);
				NVIC_SetPriority(UARTE1_IRQn, pCfg->IntPrio);
				NVIC_EnableIRQ(UARTE1_IRQn);
				break;
#endif
        }
    }

	return true;
}
